video adjusted for phone

--- a/furniture/furni/templates/furni/home.html
+++ b/furniture/furni/templates/furni/home.html
@@ -731,6 +731,7 @@
   padding: 50px;
   justify-content: space-around;
   gap: 0px;
+  flex-wrap: wrap;
   
   padding-left: 50px;
 }
@@ -740,6 +741,7 @@
   flex-direction: column;
 }
 .right-about {
+  overflow:auto;
   padding-right: 0px;
   
 }
